// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchedulePanel Triggers tests Interactivity: Schedule Tabs Hourly selection updates expression breakdown and expression: Updated hourly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main schedulePanelContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.schedulePanel.title
          </h2>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Minutes"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Minutes"
                id="bp3-tab-title_Wizard_Minutes"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.minutesLabel
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Hourly"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="Hourly"
                id="bp3-tab-title_Wizard_Hourly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.hourlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Daily"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Daily"
                id="bp3-tab-title_Wizard_Daily"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.dailyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Weekly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Weekly"
                id="bp3-tab-title_Wizard_Weekly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.weeklyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Monthly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Monthly"
                id="bp3-tab-title_Wizard_Monthly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.monthlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Yearly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Yearly"
                id="bp3-tab-title_Wizard_Yearly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.yearlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Custom"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Custom"
                id="bp3-tab-title_Wizard_Custom"
                role="tab"
                tabindex="0"
              >
                common.repo_provider.customLabel
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_Wizard_Hourly"
              class="bp3-tab-panel"
              id="bp3-tab-panel_Wizard_Hourly"
              role="tabpanel"
            >
              <div
                class="hourlyTab"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  data-name="toothpick"
                >
                  <p
                    class="StyledProps--font StyledProps--main label"
                  >
                    pipeline.triggers.schedulePanel.runEvery
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main toothpick"
                  >
                    <div
                      class="bp3-popover-wrapper selectStyle Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="4"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      />
                    </div>
                    <p
                      class="StyledProps--font StyledProps--main adjoiningText"
                    >
                      pipeline.triggers.schedulePanel.hoursAnd
                    </p>
                    <div
                      class="bp3-popover-wrapper selectStyle Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="03"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                      <div
                        class="bp3-overlay bp3-overlay-inline"
                      >
                        <div
                          class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                          style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0);"
                        >
                          <div
                            class="bp3-popover bp3-minimal bp3-select-popover"
                            style="transform-origin: center top;"
                          >
                            <div
                              class="bp3-popover-content"
                            >
                              <div>
                                <ul
                                  class="bp3-menu"
                                >
                                  <li
                                    class="Select--menuItem Select--active"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      00
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      01
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      02
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      03
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      04
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      05
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      06
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      07
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      08
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      09
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      10
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      11
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      12
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      13
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      14
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      15
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      16
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      17
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      18
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      19
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      20
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      21
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      22
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      23
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      24
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      25
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      26
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      27
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      28
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      29
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      30
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      31
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      32
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      33
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      34
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      35
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      36
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      37
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      38
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      39
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      40
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      41
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      42
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      43
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      44
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      45
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      46
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      47
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      48
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      49
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      50
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      51
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      52
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      53
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      54
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      55
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      56
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      57
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      58
                                    </p>
                                  </li>
                                  <li
                                    class="Select--menuItem"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                      style="--text-line-clamp: 1;"
                                    >
                                      59
                                    </p>
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <p
                      class="StyledProps--font StyledProps--main adjoiningText"
                    >
                      pipeline.triggers.schedulePanel.minutesAfterTheHour
                    </p>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expressionBreakdown"
                  data-name="expressionBreakdown"
                >
                  <p
                    class="StyledProps--font StyledProps--main title"
                  >
                    pipeline.triggers.schedulePanel.expressionBreakdown
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.minutesLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          3
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.hoursLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          0/4
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 125px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfMonthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.monthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 250px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfWeekLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-top: 0px; padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expression"
                  data-name="expression"
                >
                  <p
                    class="StyledProps--font StyledProps--main label"
                  >
                    pipeline.triggers.schedulePanel.cronExpression
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main field"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      3 0/4 * * *
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main submitButton Button--with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SchedulePanel Triggers tests Interactivity: Schedule Tabs Minutes selection updates expression breakdown and expression 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main schedulePanelContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.schedulePanel.title
          </h2>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Minutes"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="Minutes"
                id="bp3-tab-title_Wizard_Minutes"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.minutesLabel
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Hourly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Hourly"
                id="bp3-tab-title_Wizard_Hourly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.hourlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Daily"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Daily"
                id="bp3-tab-title_Wizard_Daily"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.dailyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Weekly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Weekly"
                id="bp3-tab-title_Wizard_Weekly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.weeklyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Monthly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Monthly"
                id="bp3-tab-title_Wizard_Monthly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.monthlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Yearly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Yearly"
                id="bp3-tab-title_Wizard_Yearly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.yearlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Custom"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Custom"
                id="bp3-tab-title_Wizard_Custom"
                role="tab"
                tabindex="0"
              >
                common.repo_provider.customLabel
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_Wizard_Minutes"
              class="bp3-tab-panel"
              id="bp3-tab-panel_Wizard_Minutes"
              role="tabpanel"
            >
              <div
                class="minutesTab"
              >
                <p
                  class="StyledProps--font StyledProps--main label"
                >
                  pipeline.triggers.schedulePanel.runEvery
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                  style="align-items: center;"
                >
                  <div
                    class="bp3-form-group"
                    data-id="minutes-0"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="minutes"
                              placeholder="- Select -"
                              style="padding-right: 0px;"
                              type="text"
                              value="30"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                        <div
                          class="bp3-overlay bp3-overlay-inline"
                        >
                          <div
                            class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
                            style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
                          >
                            <div
                              class="bp3-popover bp3-minimal bp3-select-popover"
                            >
                              <div
                                class="bp3-popover-content"
                              >
                                <div>
                                  <ul
                                    class="bp3-menu"
                                  >
                                    <li
                                      class="Select--menuItem Select--active"
                                    >
                                      <p
                                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                        style="--text-line-clamp: 1;"
                                      >
                                        5
                                      </p>
                                    </li>
                                    <li
                                      class="Select--menuItem"
                                    >
                                      <p
                                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                        style="--text-line-clamp: 1;"
                                      >
                                        10
                                      </p>
                                    </li>
                                    <li
                                      class="Select--menuItem"
                                    >
                                      <p
                                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                        style="--text-line-clamp: 1;"
                                      >
                                        15
                                      </p>
                                    </li>
                                    <li
                                      class="Select--menuItem"
                                    >
                                      <p
                                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                        style="--text-line-clamp: 1;"
                                      >
                                        20
                                      </p>
                                    </li>
                                    <li
                                      class="Select--menuItem"
                                    >
                                      <p
                                        class="StyledProps--font Text--lineclamp StyledProps--main Select--menuItemLabel"
                                        style="--text-line-clamp: 1;"
                                      >
                                        30
                                      </p>
                                    </li>
                                  </ul>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                  >
                    pipeline.triggers.schedulePanel.minutesParentheses
                  </p>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expressionBreakdown"
                  data-name="expressionBreakdown"
                >
                  <p
                    class="StyledProps--font StyledProps--main title"
                  >
                    pipeline.triggers.schedulePanel.expressionBreakdown
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.minutesLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          0/30
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.hoursLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 125px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfMonthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.monthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 250px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfWeekLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-top: 0px; padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expression"
                  data-name="expression"
                >
                  <p
                    class="StyledProps--font StyledProps--main label"
                  >
                    pipeline.triggers.schedulePanel.cronExpression
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main field"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      0/30 * * * *
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main submitButton Button--with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SchedulePanel Triggers tests Renders/snapshots Initial Render - Schedule Panel 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main schedulePanelContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.schedulePanel.title
          </h2>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Minutes"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="Minutes"
                id="bp3-tab-title_Wizard_Minutes"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.minutesLabel
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Hourly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Hourly"
                id="bp3-tab-title_Wizard_Hourly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.hourlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Daily"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Daily"
                id="bp3-tab-title_Wizard_Daily"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.dailyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Weekly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Weekly"
                id="bp3-tab-title_Wizard_Weekly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.weeklyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Monthly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Monthly"
                id="bp3-tab-title_Wizard_Monthly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.monthlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Yearly"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Yearly"
                id="bp3-tab-title_Wizard_Yearly"
                role="tab"
                tabindex="0"
              >
                pipeline.triggers.schedulePanel.yearlyTabTitle
              </div>
              <div
                aria-controls="bp3-tab-panel_Wizard_Custom"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="Custom"
                id="bp3-tab-title_Wizard_Custom"
                role="tab"
                tabindex="0"
              >
                common.repo_provider.customLabel
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_Wizard_Minutes"
              class="bp3-tab-panel"
              id="bp3-tab-panel_Wizard_Minutes"
              role="tabpanel"
            >
              <div
                class="minutesTab"
              >
                <p
                  class="StyledProps--font StyledProps--main label"
                >
                  pipeline.triggers.schedulePanel.runEvery
                </p>
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                  style="align-items: center;"
                >
                  <div
                    class="bp3-form-group"
                    data-id="minutes-0"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="minutes"
                              placeholder="- Select -"
                              style="padding-right: 0px;"
                              type="text"
                              value="5"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
                  >
                    pipeline.triggers.schedulePanel.minutesParentheses
                  </p>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expressionBreakdown"
                  data-name="expressionBreakdown"
                >
                  <p
                    class="StyledProps--font StyledProps--main title"
                  >
                    pipeline.triggers.schedulePanel.expressionBreakdown
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main"
                  >
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.minutesLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          0/5
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.hoursLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 125px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfMonthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 100px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.monthLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                    <div
                      class="Layout--vertical StyledProps--main column"
                      data-name="column"
                      style="width: 250px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main label"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.triggers.schedulePanel.dayOfWeekLabel
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main value inactive"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          *
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main spacer"
                  style="padding-top: 0px; padding-bottom: 0px; margin-left: 0px; width: 100%;"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="StyledProps--font StyledProps--main expression"
                  data-name="expression"
                >
                  <p
                    class="StyledProps--font StyledProps--main label"
                  >
                    pipeline.triggers.schedulePanel.cronExpression
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main field"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main submitButton Button--with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
